--- a/Tests/Runtime/Cunomi.Package-Name.Tests.asmdef
+++ b/Tests/Runtime/Cunomi.Package-Name.Tests.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Cunomi.Core.Tests",
-    "rootNamespace": "Cunomi.Core",
+    "name": "Cunomi.Package-Name.Tests",
+    "rootNamespace": "Cunomi.Package-Name",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
