--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-    "name": "com.cunomi.core",
+    "name": "com.cunomi.package-name",
     "version": "1.0.0",
-    "displayName": "Cunomi Core",
-    "description": "This package implements the core features for a game build by cunomi",
+    "displayName": "Package Name",
+    "description": "Package Description",
     "unity": "6000.0",
     "unityRelease": "31f1",
-    "documentationUrl": "https://cunomi.com/documentation/core",
+    "documentationUrl": "https://cunomi.com/documentation",
     "changelogUrl": "https://cunomi.com/changelog.html",
     "licensesUrl": "https://cunomi.com/licensing.html",
     "dependencies": {
     },
     "keywords": [
-        "cunomi",
-        "core"
+        "keyword1",
+        "keyword2",
+        "keyword3"
     ],
     "author": {
-        "name": "DotNomi",
+        "name": "Example Name",
         "url": "https://www.cunomi.com"
     }
 }
